# AgentOps

./: .gitignore  README.md  commit_changes.sh
backend/: pyproject.toml  requirements-lock.txt
backend/app/: __init__.py  main.py  schemas.py
backend/app/analyzer/: __init__.py  file_selection.py  repository_analyzer.py  repository_index.py
backend/app/api/: __init__.py  routes.py
backend/app/documentation/: __init__.py  documentation_generator.py  guide.py
backend/app/evaluation/: __init__.py  baseline.py  cli.py  errors.py  fixtures.py  hashing.py  identifiers.py  json_utils.py  matcher.py  models.py  regression.py  runner.py  service.py  storage.py  suites.py  tracing.py  versioning.py  workflows.py
backend/app/evaluation/baselines/: mvp-demo-suite@v1.json  (+1 more)
backend/app/github/: __init__.py  pull_request_loader.py  service.py
backend/app/incident/: __init__.py  analyzer.py  evidence_collector.py  fixtures.py  models.py  provider.py  rca_generator.py  service.py
backend/app/reporting/: __init__.py  report_generator.py
backend/app/review/: __init__.py  diff_analyzer.py  models.py  pr_review_generator.py
backend/tests/: test_api.py  test_diff_analyzer.py  test_documentation_generator.py  test_evaluation.py  test_file_selection.py  test_github_service.py  test_incident_analyzer.py  test_incident_evidence_collector.py  test_incident_fixture_loader.py  test_pr_review_generator.py  test_pull_request_loader.py  test_quality_gates.py  test_rca_generator.py  test_regression_tracing.py  test_repository_analyzer.py  test_repository_index.py
(+26 files in other folders)
