[project]
name = "agentops-backend"
version = "0.1.0"
description = "AgentOps M01 repository understanding backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8,<10"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
